# creator-copilot

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
src/creator_copilot/: __init__.py  cli.py  config.py  engine.py  llm.py  models.py  prompts.py  search.py  text_processing.py
src/creator_copilot/modules/: __init__.py  perspective_discovery.py  research_dialogue.py  script_generation.py
