[project]
name = "creator-copilot"
version = "0.1.0"
description = "Assistente de roteiros para Podcasts/YouTube inspirado no STORM"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "tavily-python>=0.3.3",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.2.2",
    "langsmith>=0.9.3",
]

[project.scripts]
creator-copilot = "creator_copilot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
